## Process this file with automake to produce Makefile.in

graph_tool_PYTHON = \
    __init__.py \
    dl_import.py \
    core.py \
    decorators.py \
    io.py \
    all.py

graph_tooldir = $(MOD_DIR)

graph_tool_run_action_PYTHON = \
    run_action/__init__.py \
    run_action/inline.py \
    run_action/run_action_support.hh \
    run_action/run_action_template.hh

graph_tool_run_actiondir = $(MOD_DIR)/run_action

graph_tool_generation_PYTHON = \
    generation/__init__.py
graph_tool_generationdir = $(MOD_DIR)/generation

graph_tool_correlations_PYTHON = \
    correlations/__init__.py
graph_tool_correlationsdir = $(MOD_DIR)/correlations

graph_tool_stats_PYTHON = \
    stats/__init__.py
graph_tool_statsdir = $(MOD_DIR)/stats

graph_tool_clustering_PYTHON = \
    clustering/__init__.py
graph_tool_clusteringdir = $(MOD_DIR)/clustering

graph_tool_centrality_PYTHON = \
    centrality/__init__.py
graph_tool_centralitydir = $(MOD_DIR)/centrality

graph_tool_community_PYTHON = \
    community/__init__.py
graph_tool_communitydir = $(MOD_DIR)/community

graph_tool_draw_PYTHON = \
    draw/__init__.py
graph_tool_drawdir = $(MOD_DIR)/draw

graph_tool_util_PYTHON = \
    util/__init__.py
graph_tool_utildir = $(MOD_DIR)/util

graph_tool_misc_PYTHON = \
    misc/__init__.py
graph_tool_miscdir = $(MOD_DIR)/misc
