## Process this file with automake to produce Makefile.in

graph_tool_PYTHON = \
    __init__.py \
    dl_import.py \
    decorators.py \
    io.py \
    all.py

graph_tooldir = $(MOD_DIR)

graph_tool_run_action_PYTHON = \
    run_action/__init__.py \
    run_action/inline.py \
    run_action/run_action_support.hh \
    run_action/run_action_template.hh

graph_tool_run_actiondir = $(MOD_DIR)/run_action

graph_tool_generation_PYTHON = \
    generation/__init__.py
graph_tool_generationdir = $(MOD_DIR)/generation

graph_tool_collection_PYTHON = \
    collection/__init__.py
graph_tool_collection_DATA = \
    collection/adjnoun.xml.gz \
    collection/as-22july06.xml.gz \
    collection/astro-ph.xml.gz \
    collection/celegansneural.xml.gz \
    collection/cond-mat-2003.xml.gz \
    collection/cond-mat-2005.xml.gz \
    collection/cond-mat.xml.gz \
    collection/dolphins.xml.gz \
    collection/football.xml.gz \
    collection/hep-th.xml.gz \
    collection/karate.xml.gz \
    collection/lesmis.xml.gz \
    collection/netscience.xml.gz \
    collection/polblogs.xml.gz \
    collection/polbooks.xml.gz \
    collection/power.xml.gz \
    collection/pgp-strong-2009.xml.gz \
    collection/serengeti-foodweb.xml.gz \
    collection/email-Enron.xml.gz
graph_tool_collectiondir = $(MOD_DIR)/collection

graph_tool_correlations_PYTHON = \
    correlations/__init__.py
graph_tool_correlationsdir = $(MOD_DIR)/correlations

graph_tool_stats_PYTHON = \
    stats/__init__.py
graph_tool_statsdir = $(MOD_DIR)/stats

graph_tool_clustering_PYTHON = \
    clustering/__init__.py
graph_tool_clusteringdir = $(MOD_DIR)/clustering

graph_tool_centrality_PYTHON = \
    centrality/__init__.py
graph_tool_centralitydir = $(MOD_DIR)/centrality

graph_tool_community_PYTHON = \
    community/__init__.py \
    community/blockmodel.py
graph_tool_communitydir = $(MOD_DIR)/community

graph_tool_draw_PYTHON = \
    draw/__init__.py \
    draw/cairo_draw.py \
    draw/gtk_draw.py \
    draw/graphviz_draw.py
graph_tool_draw_DATA = \
    draw/graph-tool-logo.svg
graph_tool_drawdir = $(MOD_DIR)/draw

graph_tool_util_PYTHON = \
    util/__init__.py
graph_tool_utildir = $(MOD_DIR)/util

graph_tool_topology_PYTHON = \
    topology/__init__.py
graph_tool_topologydir = $(MOD_DIR)/topology

graph_tool_flow_PYTHON = \
    flow/__init__.py
graph_tool_flowdir = $(MOD_DIR)/flow

graph_tool_spectral_PYTHON = \
    spectral/__init__.py
graph_tool_spectraldir = $(MOD_DIR)/spectral

graph_tool_search_PYTHON = \
    search/__init__.py
graph_tool_searchdir = $(MOD_DIR)/search

EXTRA_DIST = $(graph_tool_draw_DATA) $(graph_tool_collection_DATA)
