## Process this file with automake to produce Makefile.in

AM_CPPFLAGS = $(MOD_CPPFLAGS)

AM_CFLAGS=$(AM_CXXFLAGS)

libgraph_tool_miscdir = $(MOD_DIR)/misc

libgraph_tool_misc_LTLIBRARIES = libgraph_tool_misc.la

libgraph_tool_misc_la_includedir = $(MOD_DIR)/include

libgraph_tool_misc_la_LIBADD = $(MOD_LIBADD)

libgraph_tool_misc_la_LDFLAGS = $(MOD_LDFLAGS)

libgraph_tool_misc_la_SOURCES = \
    graph_misc.cc \
    graph_isomorphism.cc

libgraph_tool_misc_la_include_HEADERS =
